<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encrypt</string>
    <string name="action_settings">设置</string>
    <string name="search_hint">输入搜索字段</string>
    <string name="app_passkey">Passkey</string>
    <string name="submit">Submit</string>
    <string name="OK">确定</string>
    <string name="CANCEL">取消</string>
    <string name="edit_code">EditCode</string>
    <string name="show_low">什么时候才能学会一个人的时候不孤单</string>
    <string name="show_high">每个人，都是另一个人的风景</string>
    
    <!-- MainActivity  -->
    <string name="set_key">设置密码</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>  
    <string name="about_infomation">文件加密 by:zq 版本0.1</string>
    <string name="shared_preference_name">encrypt_by_zq</string>
    <string name="key_low">key_low</string>
    <string name="key_high">key_high</string>
    
    <!-- SetKey -->
    <string name="old_key">原始密码</string>
    <string name="new_key">新密码</string>
    <string name="sure_key">确认密码</string>
    <string name="change">更改</string>
    <string name="app_set_key">设置密码</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="radio_warn">请先选择密码级别</string>

    <!-- 创建文件 -->
    <string name="app_data_file_path">app_data_file_path</string>
    <string name="security_file_low_name">security_file_low_name</string>
    <string name="security_file_high_name">security_file_high_name</string>
    
    <!-- 密码编辑 -->
    <string name="save">保存</string>
    <string name="open">打开</string>
    
    <!-- 浏览文件 -->
    <string name="Browser">浏览文件</string>
    <string name="make_sure">确定选择该文件吗？</string>
    <string name="title_activity_secret_content_show">密码展示</string>
    <string name="title_activity_code_detail_reg">CodeDetailReg</string>

    <!-- 密码详情页 -->
    <string name="detail_name">名称:</string>
    <string name="detail_account">帐号:</string>
    <string name="detail_password">密码:</string>
    <string name="detail_email">邮箱:</string>
    <string name="detail_extra">附加:</string>
    <string name="detail_name_e">name</string>
    <string name="detail_account_e">account</string>
    <string name="detail_password_e">password</string>
    <string name="detail_email_e">email</string>
    <string name="detail_extra_e">extra</string>
    <string name="detail_commit">修改</string>
</resources>
